<resources>
    <string name="app_name">Just Java</string>
    <string name="edit_text_name">Name</string>
    <string name="toppings_text">TOPPINGS</string>
    <string name="whipped_text">Whipped Cream</string>
    <string name="chocolate_text">Chocolate</string>
    <string name="quantity_text">Quantity</string>
    <string name="minus_text">-</string>
    <string name="plus_text">+</string>
    <string name="order_text">Order</string>
    <string name="count_default_text">1</string>
</resources>
